--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,11 @@ body {
   background-color: #1e1e1e;  /* Darker background for contrast */
   font-family: Arial, sans-serif;
   color: #f5f5f5;  /* Light text for readability */
-
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 .background-image {
   /*background: url(https://files.encryptiacity.com/images/orderingscreen_BG.png) no-repeat center center;*/
