--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,11 @@ body {
 background: url(https://files.encryptiacity.com/images/Cat_Hotel.png) no-repeat center center;
 background-size: cover;
 width: 100%;
-height: 100vh; 
 
 }
 
 /* Navbar */
-.navbar {
+.navbar1 {
   background-color: #2c2c2c; /* Dark navbar */
   border-bottom: 2px solid #ae764b; /* Accent color */
   padding: 0px 0; /* Make navbar bigger */
